--- a/app/resources/page.module.css
+++ b/app/resources/page.module.css
@@ -33,7 +33,7 @@
   border: 1px solid #eaeaea;
   border-radius: 1rem;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  /* max-width: 300px; */
 }
 
 .card a {
